# agent-telemetry

./: .gitignore  README.md  milestone_1_report.html  pyproject.toml
src/agenttelemetry/: __init__.py  __main__.py  cli.py
src/agenttelemetry/model/: __init__.py  finding.py  graph.py  test.py  trace.py
src/agenttelemetry/runtime/: __init__.py  collector.py  jsonl.py
tests/: test_cli.py  test_models.py  test_runtime.py
