[project]
name = "agent-telemetry"
version = "0.1.0"
description = "Security and observability toolkit for LangGraph agentic systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentTelemetry Contributors" }]
dependencies = [
    "pydantic>=2.7,<3",
    "rich>=13.7,<14",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[project.scripts]
agenttelemetry = "agenttelemetry.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttelemetry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
